--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -427,22 +427,27 @@ header p, a, h1, h2
 
 
 .text_seats
-	margin: 25px 0;
-	text-align: justify;
+	margin-top: 25px;
+	&>p
+		text-align: justify;
 	&>p, &>a
 		font-size: em(24);
 		line-height: 1.2;
 		color: #fff;
-	a
+	&>a
 		text-transform: lowercase;
+		display: inline-block;
 		position: relative;
-		right: 0;
+		right: -50%;
+		transform: translate(-50%, -100%);		
+		background: no-repeat center right url(../img/arrow_white.png);
+		padding-right: 25px;
 
-		.icon-arrow-right2:before 
-			content: "\ea3c";
-			position: absolute;
-			font-size: 18px;
-			line-height: 30px;
+		// .icon-arrow-right2:before 
+		// 	content: "\ea3c";
+		// 	position: absolute;
+		// 	font-size: 18px;
+		// 	line-height: 30px;
 
 .seats_20
 	background: linear-gradient(to left, rgba(0,0,0, 0) 30%, rgba($burgundy, 0.9) 60%), url("../img/20_seats.png") top right no-repeat
@@ -618,6 +623,9 @@ header p, a, h1, h2
 
 /* REVIEWS */
 
+#reviews
+	padding: 105px 0;
+	position: relative;
 .slider_full_size
 	margin: 0 auto;
 	overflow: hidden;
@@ -691,27 +699,53 @@ header p, a, h1, h2
 
 	.alex_opinion	
 		margin-left: 0;	
-		background: url(../img/review_1_1.png) no-repeat center top;
+		background: url(../img/review_1_1.png) no-repeat center top/contain;
 	.alex
-		background: url(../img/review_2_1_alex.png) no-repeat center bottom;
+		background: url(../img/review_2_1_alex.png) no-repeat center bottom/contain;
 	.table
-		background: url(../img/review_1_2.png) no-repeat center top;
+		background: url(../img/review_1_2.png) no-repeat center top/contain;
 	.denis
-		background: url(../img/review_2_2_denis.png) no-repeat center bottom;
+		background: url(../img/review_2_2_denis.png) no-repeat center bottom/contain;
 	.denis_opinion
-		background: url(../img/review_1_3.png) no-repeat center top;
+		background: url(../img/review_1_3.png) no-repeat center top/contain;
 	.anna	
 		margin-left: 0;	
-		background: url(../img/review_4_1_ann.png) no-repeat center bottom;
+		background: url(../img/review_4_1_ann.png) no-repeat center bottom/contain;
 	.anna_opinion
-		background: url(../img/review_3_1.png) no-repeat center top;
+		background: url(../img/review_3_1.png) no-repeat center top/contain;
 	.chairs
-		background: url(../img/review_4_2.png) no-repeat center bottom;
+		background: url(../img/review_4_2.png) no-repeat center bottom/contain;
 	.jane_opinion
-		background: url(../img/review_3_2.png) no-repeat center top;
+		background: url(../img/review_3_2.png) no-repeat center top/contain;
 	.jane
-		background: url(../img/review_4_3_jane.png) no-repeat center bottom;
+		background: url(../img/review_4_3_jane.png) no-repeat center bottom/contain;
 	
+.prev, .next
+	position: absolute;
+	background-color: transparent;
+	border: none;
+	outline: none;
+	box-shadow: none;
+	margin: 0;
+	background-image: url(../img/arrow.png);
+	width: 63px;
+	height: 51px;	
+	cursor: pointer;
+	z-index: 10;
+	transition: all 0.5s ease;
+	
+.prev
+	top: 50%;
+	left: 10px;
+	transform: translateY(-50%);
+	&:hover
+		left: 0;
+.next
+	top: 50%;
+	right: 10px;
+	transform: rotate(180deg) translateY(50%);
+	&:hover
+		right: 0;
 
 
 /* DETAILS */
@@ -1011,23 +1045,108 @@ header p, a, h1, h2
 	h3:before
 		top: 208px;
 
-#map 
+#map_block.active
 	display: block;
+	opacity: 1;
+#map_block
+	// display: none;
 	position: absolute;
-	overflow: hidden;
 	width: 80%;
 	height: 80%;
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
-	opacity: 1;
+	// opacity: 0;
 	box-shadow: 0 20px 20px 10px rgba(0, 0, 0, 0.5);
 	border-radius: 10px;
 	animation: show 1s linear;
-#map_google
-	border-radius: 20px;		
+.map	
+	overflow: hidden;
 	width: 100%;
 	height: 100%;
+	border-radius: 10px;	
+#map_google		
+	width: 100%;
+	height: 100%;
+.cross_btn
+	cursor: pointer;
+	display: block;
+	width: 25px;
+	height: 25px;
+	border-radius: 50%;
+	position: absolute;
+	top: -15px;
+	right: -30px;
+	cursor: pointer;
+	background-color: rgba($blue, 0.5);
+	z-index: 20;
+	.cross_line
+		display: block;
+		height: 2px;
+		width: 20px;				
+		background-color: $mainBackground;
+		transition: transform 0.5s ease;
+	.cross_line:nth-child(1)
+		transform: rotate(45deg) translate(8px, -1px);
+		transform-origin: 0px 0px;	
+	.cross_line:nth-child(2)
+		transform: rotate(-45deg) translate(-1px, -2px);
+		transform-origin: 25px 1px;
+
+
+
+/* POP UP*/
+.pop_up.active
+	height: 530px;
+	opacity: 1;
+	display: block;
+.pop_up
+	display: none;
+	max-width: 870px;
+	width: 100%;
+	position: fixed;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	// background-color: #f9f6d6;
+	text-align: center;
+	border-radius: 20px;
+	z-index: 20;
+	// -webkit-animation-name: fadeIn;
+	// animation: fadeIn 1s linear;
+
+
+
+.thank
+	display: block;
+	height: 140px;
+	position: relative;
+	background-color: $burgundy;
+	border-radius: 20px 20px 0 0;
+	font-size: em(40);
+	font-weight: 500;
+	color: #fafafa;
+	line-height: 0px;
+.thank span	
+		display: block;	
+		font-size: em(20);
+		line-height: 90px;
+.central_image
+	font-size: em(40);
+	font-weight: 500;
+	color: $burgundy;
+	height: 300px;
+	line-height: 300px;
+	background: url(../img/pop_up_backgrnd.png) center center/cover no-repeat $mainBackground;
+.manager_contact
+	height: 140px;
+	font-size: em(36);
+	font-weight: 500;
+	line-height: 140px;
+	background-color: $burgundy;
+	color: #fafafa;
+	border-radius: 0 0 20px 20px;
+	
 
 
 /* FOOTER*/
